improved body in 5th assignment

--- a/5thassignment/index.html
+++ b/5thassignment/index.html
@@ -34,7 +34,7 @@
             <span class="icon-bar"></span>
           </button>
         </div>
-        
+
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right">
             <li id="navHomeButton" class="visible-xs active">
@@ -71,7 +71,79 @@
   </div>
   <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
 
-  <div id="main-content" class="container"></div>
+  <div id="content" class="container">
+  <div class="row">
+  <div class="column">
+    <div class="card">
+    <img src="images/food_1.jpg" alt="Avatar" style="width:100%">
+    <h4><b>Chinese Sushi</b></h4>
+    <p>Green Eggs & Ham Sushi, Sushi, Vegetable Sushi.</p>
+
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card">
+    <img src="images/food_2.jpeg" alt="Avatar" style="width:100%">
+    <h4><b>Chinese Sushi</b></h4>
+    <p>Green Eggs & Ham Sushi, Sushi, Vegetable Sushi.</p>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card">
+    <img src="images/food_4.jpg" alt="Avatar" style="width:100%">
+    <h4><b>Chinese Sushi</b></h4>
+    <p>Green Eggs & Ham Sushi, Sushi, Vegetable Sushi.</p>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card">
+    <img src="images/food_4.jpg" alt="Avatar" style="width:100%">
+    <h4><b>Chinese Sushi</b></h4>
+    <p>Green Eggs & Ham Sushi, Sushi, Vegetable Sushi.r</p>
+    </div>
+  </div>
+</div>
+  </div>
+  <div id="content" class="container">
+  <div class="row">
+    <div class="column">
+      <div class="card">
+      <img src="images/food_1.jpg" alt="Avatar" style="width:100%">
+      <h4><b>Chinese Sushi</b></h4>
+      <p>Green Eggs & Ham Sushi, Sushi, Vegetable Sushi.</p>
+
+      </div>
+    </div>
+
+    <div class="column">
+      <div class="card">
+      <img src="images/food_2.jpeg" alt="Avatar" style="width:100%">
+      <h4><b>Chinese Sushi</b></h4>
+      <p>Green Eggs & Ham Sushi, Sushi, Vegetable Sushi.</p>
+      </div>
+    </div>
+
+    <div class="column">
+      <div class="card">
+      <img src="images/food_4.jpg" alt="Avatar" style="width:100%">
+      <h4><b>Chinese Sushi</b></h4>
+      <p>Green Eggs & Ham Sushi, Sushi, Vegetable Sushi.</p>
+      </div>
+    </div>
+
+    <div class="column">
+      <div class="card">
+      <img src="images/food_4.jpg" alt="Avatar" style="width:100%">
+      <h4><b>Chinese Sushi</b></h4>
+      <p>Green Eggs & Ham Sushi, Sushi, Vegetable Sushi.r</p>
+      </div>
+    </div>
+  </div>
+</div>
+
 
   <footer class="panel-footer">
     <div class="container">
